# multimedia_audio_framework_5293

./: .gitignore  6149.diff  CODEOWNERS  DESIGN_REFACTOR_NODE.md  OAT.xml  Offline_Chain_Server_mock1.patch  Offline_Chain_Server_mock1.patchZone.Identifier  README.md  README_zh.md  REFACTOR_CASE_STUDY.md  accessibility.gni  audio_framework.versionscript  audio_framework_test_sources.gni  av_session.gni  bluetooth_part.gni  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml  my.patch  mypatch
frameworks/cj/: BUILD.gn
frameworks/cj/include/: multimedia_audio_capturer_callback.h  multimedia_audio_capturer_impl.h  multimedia_audio_common.h  multimedia_audio_error.h  multimedia_audio_ffi.h  multimedia_audio_manager_impl.h  multimedia_audio_renderer_callback.h  multimedia_audio_renderer_impl.h  multimedia_audio_routing_manager_callback.h  multimedia_audio_routing_manager_impl.h  multimedia_audio_session_manager_callback.h  multimedia_audio_session_manager_impl.h  multimedia_audio_stream_manager_callback.h  multimedia_audio_stream_manager_impl.h  multimedia_audio_volume_group_manager_callback.h  multimedia_audio_volume_group_manager_impl.h  multimedia_audio_volume_manager_callback.h  multimedia_audio_volume_manager_impl.h
frameworks/cj/src/: multimedia_audio_capturer_callback.cpp  multimedia_audio_capturer_impl.cpp  multimedia_audio_common.cpp  multimedia_audio_ffi.cpp  multimedia_audio_manager_impl.cpp  multimedia_audio_renderer_callback.cpp  multimedia_audio_renderer_impl.cpp  multimedia_audio_routing_manager_callback.cpp  multimedia_audio_routing_manager_impl.cpp  multimedia_audio_session_manager_callback.cpp  multimedia_audio_session_manager_impl.cpp  multimedia_audio_stream_manager_callback.cpp  multimedia_audio_stream_manager_impl.cpp  multimedia_audio_volume_group_manager_callback.cpp  multimedia_audio_volume_group_manager_impl.cpp  multimedia_audio_volume_manager_callback.cpp  multimedia_audio_volume_manager_impl.cpp
frameworks/js/napi/: BUILD.gn
frameworks/native/audioadapter/: BUILD.gn  libpulse_audio_service_adapter.versionscript
frameworks/native/audiocapturer/: BUILD.gn
frameworks/native/audioclock/: BUILD.gn
frameworks/native/audiodefinitions/: BUILD.gn
frameworks/native/audioeffect/: BUILD.gn  libaudio_effect.versionscript
frameworks/native/audioinnercall/: BUILD.gn
frameworks/native/audioqosmanager/: BUILD.gn  audio_qosmanager.cpp
frameworks/native/audiorenderer/: BUILD.gn
frameworks/native/audioschedule/: BUILD.gn  audio_schedule.cpp
frameworks/native/audioutils/: BUILD.gn
frameworks/native/bluetoothclient/: BUILD.gn  audio_bluetooth_manager.cpp  audio_bluetooth_manager.h  bluetooth_a2dp_interface.cpp  bluetooth_a2dp_interface.h  bluetooth_device_manager.cpp  bluetooth_device_manager.h  bluetooth_device_utils.cpp  bluetooth_device_utils.h  bluetooth_hfp_interface.cpp  bluetooth_hfp_interface.h  bluetooth_sco_manager.cpp  bluetooth_sco_manager.h  libaudio_bluetooth_client.versionscript
frameworks/native/examples/: BUILD.gn  pa_stream_test.cpp
frameworks/native/hdiadapter_new/: BUILD.gn  libhdiadapter_new.versionscript
frameworks/native/offlineaudioeffect/: BUILD.gn  BUILD.gn.rej
frameworks/native/ohaudio/: BUILD.gn  OHAudioCapturer.cpp  OHAudioCapturer.h  OHAudioCommon.cpp  OHAudioCommon.h  OHAudioDeviceDescriptor.cpp  OHAudioDeviceDescriptor.h  OHAudioManager.cpp  OHAudioManager.h  OHAudioRenderer.cpp  OHAudioRenderer.h  OHAudioResourceManager.cpp  OHAudioResourceManager.h  OHAudioRoutingManager.cpp  OHAudioRoutingManager.h  OHAudioSessionManager.cpp  OHAudioSessionManager.h  OHAudioStreamBuilder.cpp  OHAudioStreamBuilder.h  OHAudioStreamManager.cpp  OHAudioStreamManager.h  OHAudioSuiteEngine.cpp  OHAudioSuiteEngine.h  OHAudioSuiteNodeBuilder.cpp  OHAudioSuiteNodeBuilder.h  OHAudioVolumeManager.cpp  OHAudioVolumeManager.h  OHAudioWorkgroup.cpp  OHAudioWorkgroup.h
frameworks/native/ohaudiosuite/: BUILD.gn  OHAudioSuiteEngine.cpp  OHAudioSuiteEngine.h  OHAudioSuiteNodeBuilder.cpp  OHAudioSuiteNodeBuilder.h
frameworks/native/opensles/: BUILD.gn
frameworks/native/playbackcapturer/: BUILD.gn
frameworks/native/toneplayer/: BUILD.gn
frameworks/taihe/: BUILD.gn
frameworks/taihe/asrcontroller/: taihe_asr_processing_controller.cpp  taihe_asr_processing_controller.h
frameworks/taihe/audiocapturer/: taihe_audio_capturer.cpp  taihe_audio_capturer.h
frameworks/taihe/audioloopback/: taihe_audio_loopback.cpp  taihe_audio_loopback.h
frameworks/taihe/audiomanager/: taihe_audio_collaborative_manager.cpp  taihe_audio_collaborative_manager.h  taihe_audio_effect_manager.cpp  taihe_audio_effect_manager.h  taihe_audio_manager.cpp  taihe_audio_manager.h  taihe_audio_routing_manager.cpp  taihe_audio_routing_manager.h  taihe_audio_session_manager.cpp  taihe_audio_session_manager.h  taihe_audio_spatialization_manager.cpp  taihe_audio_spatialization_manager.h  taihe_audio_stream_manager.cpp  taihe_audio_stream_manager.h  taihe_audio_volume_group_manager.cpp  taihe_audio_volume_group_manager.h  taihe_audio_volume_manager.cpp  taihe_audio_volume_manager.h
frameworks/taihe/audiorenderer/: taihe_audio_renderer.cpp  taihe_audio_renderer.h  taihe_toneplayer.cpp  taihe_toneplayer.h
frameworks/taihe/common/: taihe_audio_enum.cpp  taihe_audio_enum.h  taihe_audio_error.cpp  taihe_audio_error.h  taihe_dfx_utils.cpp  taihe_dfx_utils.h  taihe_param_utils.cpp  taihe_param_utils.h  taihe_work.h
frameworks/taihe/idl/: ohos.multimedia.audio.taihe
frameworks/taihe/src/: ani_constructor.cpp
plugins/cross/: audio.gni
services/audio_engine/: BUILD.gn  README_zh.md
services/audio_engine/buffer/: hpae_pcm_buffer.cpp  hpae_pcm_buffer.h  hpae_pcm_process.cpp  hpae_pcm_process.h
services/audio_engine/dfx/: hpae_dfx_map_tree.cpp  hpae_dfx_map_tree.h  (+2 more)
services/audio_policy/: BUILD.gn  libaudio_policy_client.versionscript  libaudio_policy_service.versionscript
services/audio_service/: BUILD.gn  libaudio_process_service.versionscript
services/audio_suite/: BUILD.gn  libaudio_suite.versionscript
test/: BUILD.gn
test/fuzztest/: fuzz_utils.h
(+3130 files in other folders)
