# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("accessibility.gni")
import("appgallery.gni")
import("av_session.gni")
import("bluetooth_part.gni")
import("config.gni")
import("ressche_part.gni")
import("sensor.gni")
import("window_manager.gni")

audio_service_sources_dir = "services/audio_service"
audio_process_service_sources_template = [
  "$audio_service_sources_dir/server/src/audio_endpoint.cpp",
  "$audio_service_sources_dir/server/src/audio_endpoint_separate.cpp",
  "$audio_service_sources_dir/server/src/audio_engine_manager.cpp",
  "$audio_service_sources_dir/server/src/audio_playback_engine.cpp",
  "$audio_service_sources_dir/server/src/audio_process_in_server.cpp",
  "$audio_service_sources_dir/server/src/audio_process_stub.cpp",
  "$audio_service_sources_dir/server/src/audio_service.cpp",
  "$audio_service_sources_dir/server/src/capturer_in_server.cpp",
  "$audio_service_sources_dir/server/src/i_stream_manager.cpp",
  "$audio_service_sources_dir/server/src/ipc_stream_in_server.cpp",
  "$audio_service_sources_dir/server/src/ipc_stream_listener_proxy.cpp",
  "$audio_service_sources_dir/server/src/ipc_stream_stub.cpp",
  "$audio_service_sources_dir/server/src/none_mix_engine.cpp",
  "$audio_service_sources_dir/server/src/pa_adapter_manager.cpp",
  "$audio_service_sources_dir/server/src/pa_capturer_stream_impl.cpp",
  "$audio_service_sources_dir/server/src/pa_renderer_stream_impl.cpp",
  "$audio_service_sources_dir/server/src/policy_handler.cpp",
  "$audio_service_sources_dir/server/src/policy_provider_proxy.cpp",
  "$audio_service_sources_dir/server/src/pro_audio_stream_manager.cpp",
  "$audio_service_sources_dir/server/src/pro_renderer_stream_impl.cpp",
  "$audio_service_sources_dir/server/src/renderer_in_server.cpp",
]
audio_process_service_defines = []
if (audio_framework_feature_power_manager) {
  audio_process_service_defines += [ "FEATURE_POWER_MANAGER" ]
}
if (ressche_enable == true) {
  audio_process_service_defines += [ "RESSCHE_ENABLE" ]
}

audio_service_sources_template = [
  "$audio_service_sources_dir/server/src/audio_effect_server.cpp",
  "$audio_service_sources_dir/server/src/audio_manager_listener_proxy.cpp",
  "$audio_service_sources_dir/server/src/audio_manager_stub.cpp",
  "$audio_service_sources_dir/server/src/audio_server.cpp",
  "$audio_service_sources_dir/server/src/audio_server_asr.cpp",
  "$audio_service_sources_dir/server/src/audio_server_dump.cpp",
  "$audio_service_sources_dir/server/src/audio_server_effect.cpp",
  "$audio_service_sources_dir/server/src/config/audio_param_parser.cpp",
]
audio_service_defines = []
if (audio_framework_config_policy_enable) {
  audio_service_defines += [ "USE_CONFIG_POLICY" ]
}
if (build_variant == "user") {
  audio_service_defines += [ "AUDIO_BUILD_VARIANT_USER" ]
} else if (build_variant == "root") {
  audio_service_defines += [ "AUDIO_BUILD_VARIANT_ROOT" ]
}
if (appgallery_part_enable == true) {
  audio_service_defines += [ "FEATURE_APPGALLERY" ]
}
if (use_libfuzzer || use_clang_coverage) {
  audio_service_defines += [ "TEST_COVERAGE" ]
}

audio_effect_sources_dir = "frameworks/native/audioeffect"
audio_effect_sources_template = [
  "$audio_effect_sources_dir/src/audio_effect_chain.cpp",
  "$audio_effect_sources_dir/src/audio_effect_chain_adapter.cpp",
  "$audio_effect_sources_dir/src/audio_effect_chain_manager.cpp",
  "$audio_effect_sources_dir/src/audio_effect_hdi_param.cpp",
  "$audio_effect_sources_dir/src/audio_effect_rotation.cpp",
  "$audio_effect_sources_dir/src/audio_effect_volume.cpp",
  "$audio_effect_sources_dir/src/audio_enhance_chain.cpp",
  "$audio_effect_sources_dir/src/audio_enhance_chain_adapter.cpp",
  "$audio_effect_sources_dir/src/audio_enhance_chain_manager.cpp",
  "$audio_effect_sources_dir/src/audio_head_tracker.cpp",
]

audio_policy_service_sources_dir_template = "services/audio_policy"
audio_policy_service_sources_template = [
  "$audio_policy_service_sources_dir_template/client/src/audio_interrupt_group_info.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_volume_group_info.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_anahs_manager_listener_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_client_tracker_callback_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_concurrency_state_listener_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_group_handle.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_policy_client_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_policy_manager_listener_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_policy_manager_stub.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_policy_server.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_policy_server_handler.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_routing_manager_listener_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_spatialization_state_change_listener_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/audio_stream_collector.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/audio_affinity_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/audio_device_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/audio_policy_service.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/audio_state_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/concurrency/audio_concurrency_service.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_adapter_info.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_affinity_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_concurrency_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_converter_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_device_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_focus_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_policy_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_strategy_router_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_usage_strategy_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/config/audio_volume_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/data_share_observer_callback.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/device_init_callback.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/effect/audio_effect_config_parser.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/effect/audio_effect_service.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/interrupt/audio_interrupt_service.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/listener/device_status_listener.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/listener/power_state_listener.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/audio_adapter_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/audio_adapter_manager_handler.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/client_type_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/client_type_manager_handler.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/pnp_server/audio_input_thread.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/pnp_server/audio_pnp_server.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/pnp_server/audio_socket_thread.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/manager/volume_data_maintainer.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/app_select_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/audio_router_center.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/cockpit_phone_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/default_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/package_filter_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/pair_device_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/privacy_priority_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/public_priority_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/stream_filter_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/routers/user_select_router.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_a2dp_offload_flag.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_a2dp_offload_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_config_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_connected_device.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_iohandle_map.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_microphone_descriptor.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_policy_utils.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_router_map.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_server_proxy.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/service/audio_tone_manager.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/session/audio_session.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/session/audio_session_service.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/session/audio_session_timer.cpp",
  "$audio_policy_service_sources_dir_template/server/src/service/spatialization/audio_spatialization_service.cpp",
]
audio_policy_service_defines = []
if (audio_framework_feature_double_pnp_detect) {
  audio_policy_service_defines += [ "AUDIO_DOUBLE_PNP_DETECT" ]
}
if (build_variant == "user") {
  audio_policy_service_defines += [ "AUDIO_BUILD_VARIANT_USER" ]
} else if (build_variant == "root") {
  audio_policy_service_defines += [ "AUDIO_BUILD_VARIANT_ROOT" ]
}
if (use_libfuzzer || use_clang_coverage) {
  audio_policy_service_defines += [ "TEST_COVERAGE" ]
}
if (audio_framework_feature_support_os_account) {
  audio_policy_service_defines += [ "SUPPORT_USER_ACCOUNT" ]
}
if (audio_framework_feature_dtmf_tone) {
  audio_policy_service_sources_template += [ "$audio_policy_service_sources_dir_template/server/src/service/config/audio_tone_parser.cpp" ]
  audio_policy_service_defines += [ "FEATURE_DTMF_TONE" ]
}
if (usb_manager_enable) {
  audio_policy_service_defines += [ "USB_ENABLE" ]
  audio_policy_service_sources_template += [ "$audio_policy_service_sources_dir_template/server/src/service/manager/audio_usb_manager.cpp" ]
}
if (audio_framework_config_policy_enable) {
  audio_policy_service_defines += [ "USE_CONFIG_POLICY" ]
}
if (appgallery_part_enable == true) {
  audio_policy_service_defines += [ "FEATURE_APPGALLERY" ]
}
if (audio_framework_feature_input) {
  audio_policy_service_defines += [ "FEATURE_MULTIMODALINPUT_INPUT" ]
}
if (audio_framework_feature_device_manager) {
  audio_policy_service_defines += [ "FEATURE_DEVICE_MANAGER" ]
}

audio_policy_client_sources_template = [
  "$audio_policy_service_sources_dir_template/../audio_service/client/src/audio_device_descriptor.cpp",
  "$audio_policy_service_sources_dir_template/../audio_service/client/src/audio_filter.cpp",
  "$audio_policy_service_sources_dir_template/../audio_service/client/src/microphone_descriptor.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_anahs_manager_listener_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_client_tracker_callback_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_concurrency_state_listener_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_policy_client_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_policy_client_stub_impl.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_policy_manager.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_policy_manager_device.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_policy_manager_listener_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_routing_manager_listener_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/audio_spatialization_state_change_listener_stub.cpp",
  "$audio_policy_service_sources_dir_template/client/src/proxy/audio_policy_callback_proxy.cpp",
  "$audio_policy_service_sources_dir_template/client/src/proxy/audio_policy_microphone_proxy.cpp",
  "$audio_policy_service_sources_dir_template/client/src/proxy/audio_policy_proxy.cpp",
  "$audio_policy_service_sources_dir_template/client/src/proxy/audio_policy_volume_proxy.cpp",
]
audio_policy_client_defines = []
if (audio_framework_feature_dtmf_tone) {
  audio_policy_client_defines += [ "FEATURE_DTMF_TONE" ]
}

audio_device_manager_sources_dir = "frameworks/native/hdiadapter/devicemanager"
audio_device_manager_sources_template = [
  "$audio_device_manager_sources_dir/src/audio_device_adapter_impl.cpp",
  "$audio_device_manager_sources_dir/src/audio_device_manager_impl.cpp",
]
audio_device_manager_defines = []
if (audio_framework_feature_daudio_enable) {
  audio_device_manager_defines += [ "FEATURE_DISTRIBUTE_AUDIO" ]
}

audio_bluetooth_client_sources_dir = "frameworks/native/bluetoothclient"
audio_bluetooth_client_sources_template = [
  "$audio_bluetooth_client_sources_dir/audio_bluetooth_manager.cpp",
  "$audio_bluetooth_client_sources_dir/bluetooth_device_manager.cpp",
]
