# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/multimedia/audio_framework/config.gni")

group("audio_unit_test") {
  testonly = true

  deps = [
    "../frameworks/js/napi/audiomanager/test/unittest/audio_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/group_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/routing_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/spatialization_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/stream_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/volume_manager_test:jsunittest",
    "../frameworks/js/napi/audiorenderer/test/unittest/audio_renderer_interrupt_test:js_audio_interrupt_test",
    "../frameworks/js/napi/audiorenderer/test/unittest/audio_renderer_test:jsunittest",
    "../frameworks/js/napi/audiorenderer/toneplayer/test/unittest/tone_player_test:jsunittest",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:audio_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:audio_fast_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:inner_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/multiple_capturer_test:multiple_audio_capturer_unit_test",
    "../frameworks/native/audioeffect/test/unittest/effect_unit_test:audio_effect_chain_manager_unit_test",
    "../frameworks/native/audioeffect/test/unittest/enhance_unit_test:audio_enhance_chain_adapter_unit_test",
    "../frameworks/native/audioeffect/test/unittest/enhance_unit_test:audio_enhance_chain_manager_unit_test",
    "../frameworks/native/audioeffect/test/unittest/enhance_unit_test:audio_enhance_chain_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/group_manager_test:audio_group_manager_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/manager_test:audio_manager_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/policy_test:audio_policy_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/routing_manager_test:audio_routing_manager_test",
    "../frameworks/native/audiopolicy/test/unittest/spatialization_manager_test:audio_spatialization_manager_test",
    "../frameworks/native/audiopolicy/test/unittest/stream_manager_test:audio_stream_manager_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/volume_change_test:audio_volume_change_unit_test",
    "../frameworks/native/audiorenderer/test/multithreadtest:audio_renderer_multi_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_renderer_proxy_obj_unit_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:capture_renderer_interrupt_unit_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:renderer_capture_interrupt_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_speed_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_plus_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_pro_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_unit_test",
    "../frameworks/native/examples:pa_stream_test",

    #"../frameworks/native/hdiadapter/sink/test/unittest/audio_render_sink_plus_unit_test:audio_render_sink_plus_unit_test",

    # "../frameworks/native/hdiadapter/sink/test/unittest/audio_render_sink_unit_test:audio_render_sink_unit_test",
    "../frameworks/native/hdiadapter/sink/test/unittest/audio_running_lock_manager_unit_test:audio_running_lock_manager_unit_test",

    # "../frameworks/native/hdiadapter/sink/test/unittest/remote_fast_audio_render_sink_unit_test:remote_fast_audio_render_sink_unit_test",
    # "../frameworks/native/hdiadapter/source/test/unittest:audio_capturer_source_unit_test",
    # "../frameworks/native/hdiadapter/source/test/unittest:remote_audio_capturer_source_unit_test",
    # "../frameworks/native/hdiadapter/source/test/unittest:remote_fast_audio_capturer_source_unittest",
    "../frameworks/native/hdiadapter/test/unittest/audio_device_adapter_impl_unit_test:audio_device_adapter_impl_unit_test",
    "../frameworks/native/hdiadapter/test/unittest/audio_device_manager_impl_unit_test:audio_device_manager_impl_unit_test",
    "../frameworks/native/offlineaudioeffect/test/unittest:offline_audio_effect_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_capture_test:audio_oh_capture_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_device_change_test:audio_oh_device_change_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_microphone_block_test:audio_oh_microphone_block_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_render_test:audio_oh_render_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_routing_manager_test:audio_oh_routing_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_stream_builder_test:audio_oh_builder_unit_test",
    "../frameworks/native/toneplayer/test/unittest:audio_toneplayer_unit_test",
    "../services/audio_policy/test:audio_policy_unittest_packages",
    "../services/audio_service/test/unittest:audio_balance_unit_test",
    "../services/audio_service/test/unittest:audio_dump_pcm_unit_test",
    "../services/audio_service/test/unittest:audio_manager_listener_proxy_unit_test",
    "../services/audio_service/test/unittest:audio_spatial_channel_converter_unit_test",
    "../services/audio_service/test/unittest:audio_thread_task_unit_test",
    "../services/audio_service/test/unittest:capturer_in_client_unit_test",
    "../services/audio_service/test/unittest:capturer_in_server_unit_test",
    "../services/audio_service/test/unittest:format_converter_unit_test",
    "../services/audio_service/test/unittest:futex_tool_unit_test",
    "../services/audio_service/test/unittest:ipc_stream_in_server_unit_test",
    "../services/audio_service/test/unittest:ipc_stream_stub_unit_test",
    "../services/audio_service/test/unittest:pa_capturer_stream_impl_unit_test",
    "../services/audio_service/test/unittest:pa_renderer_stream_impl_unit_test",
    "../services/audio_service/test/unittest:pa_renderer_stream_impl_unit_test_p2",
    "../services/audio_service/test/unittest:policy_handler_unit_test",
    "../services/audio_service/test/unittest:policy_provider_stub_unit_test",
    "../services/audio_service/test/unittest:resource_manager_adapter_unit_test",
    "../services/audio_service/test/unittest:volume_tools_unit_test",
    "../services/audio_service/test/unittest/audio_manager_stub_unit_test:audio_manager_stub_unit_test",
    "../services/audio_service/test/unittest/audio_param_parser_unit_test:audio_param_parser_unit_test",
    "../services/audio_service/test/unittest/audio_server_dump_unit_test:audio_server_dump_unit_test",
    "../services/audio_service/test/unittest/audio_server_unit_test:audio_server_unit_test",
    "../services/audio_service/test/unittest/pa_adapter_manager_unit_test:pa_adapter_manager_unit_test",
    "../services/audio_service/test/unittest/pro_audio_stream_manager_unit_test:pro_audio_stream_manager_unit_test",
    "../services/audio_service/test/unittest/pro_renderer_stream_impl_unit_test:pro_renderer_stream_impl_unit_test",
  ]

  if (audio_framework_feature_opensl_es) {
    deps += [
      "../frameworks/native/opensles/test/unittest/opensles_player_test:audio_opensles_player_unit_test",
      "../frameworks/native/opensles/test/unittest/opensles_recorder_test:audio_opensles_recorder_unit_test",
    ]
  }

  if (speex_enable == true) {
    deps += [
      "../frameworks/native/hdiadapter_new:hdiadapter_unit_test",

      # "../services/audio_service/test/unittest:audio_direct_sink_unit_test",
      "../services/audio_service/test/unittest:none_mix_engine_unit_test",
    ]

    if (audio_framework_feature_low_latency) {
      deps += [
        "../services/audio_service/test/unittest/audio_endpoint_unit_test:audio_endpoint_plus_unit_test",
        "../services/audio_service/test/unittest/audio_endpoint_unit_test:audio_endpoint_unit_test",
      ]
    }
  }

  if (audio_framework_feature_low_latency) {
    deps += [
      "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_fast_renderer_unit_test",
      "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_renderer_unit_test",
      "../services/audio_service/test/unittest:audio_endpoint_separate_unit_test",
      "../services/audio_service/test/unittest:audio_process_in_client_unit_test",
      "../services/audio_service/test/unittest:audio_process_in_server_unit_test",
      "../services/audio_service/test/unittest:audio_service_unit_test",
      "../services/audio_service/test/unittest/renderer_in_server_unit_test:renderer_in_server_unit_test",
    ]
  }

  if (audio_framework_feature_inner_capturer) {
    deps += [ "../frameworks/native/playbackcapturer/test/unittest:playback_capturer_manager_unit_test" ]
  }
}

group("audio_module_test") {
  testonly = true

  deps = [ "moduletest/audiopolicy:audio_policy_module_test" ]
}

group("audio_fuzz_test") {
  testonly = true

  deps = [
    "fuzztest/audioadaptorbluetooth_fuzzer:fuzztest",
    "fuzztest/audiobluetoothmanager_fuzzer:fuzztest",
    "fuzztest/audioeffect_fuzzer:fuzztest",
    "fuzztest/audioeffectchain_fuzzer:fuzztest",
    "fuzztest/audioeffectenhance_fuzzer:fuzztest",
    "fuzztest/audioeffectservice_fuzzer:fuzztest",
    "fuzztest/audiohdiadapterdevicemanager_fuzzer:fuzztest",
    "fuzztest/audiointerruptservice_fuzzer:fuzztest",
    "fuzztest/audiointerruptservicemore_fuzzer:fuzztest",
    "fuzztest/audiomanager_fuzzer:fuzztest",
    "fuzztest/audiopolicy_fuzzer:fuzztest",

    # "fuzztest/audiopolicyanother_fuzzer:fuzztest",
    # "fuzztest/audiopolicyconcurrency_fuzzer:fuzztest",
    # "fuzztest/audiopolicymore_fuzzer:fuzztest",
    # "fuzztest/audiopolicyproxy_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservenhance_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservice_fuzzer:fuzztest",
    # "fuzztest/audiopolicyserviceenhance_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservicemore_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservicespatialization_fuzzer:fuzztest",
    "fuzztest/audiopowerstatelistener_fuzzer:fuzztest",
    "fuzztest/audioserver_fuzzer:fuzztest",
    "fuzztest/audioserverbalance_fuzzer:fuzztest",
    "fuzztest/audioservermore_fuzzer:fuzztest",
    "fuzztest/audioserviceclient_fuzzer:fuzztest",
    "fuzztest/audioservicecommon_fuzzer:fuzztest",
    "fuzztest/audioservicecommonenhance_fuzzer:fuzztest",
    "fuzztest/audioserviceserversrc_fuzzer:fuzztest",
    "fuzztest/audioserviceserversrcenhance_fuzzer:fuzztest",
    "fuzztest/audiostream_fuzzer:fuzztest",
    "fuzztest/audioutils_fuzzer:fuzztest",
  ]
}

group("audio_benchmark_test") {
  testonly = true

  deps = [
    "../frameworks/native/audiocapturer/test/benchmark:benchmarktest",
    "../frameworks/native/audiopolicy/test/benchmark:benchmarktest",
    "../frameworks/native/audiorenderer/test/benchmark:benchmarktest",
  ]
}
